<resources>
    <string name="app_name">Homework2</string>
    <string name="l0">0</string>
    <string name="l1">1</string>
    <string name="l2">2</string>
    <string name="l3">3</string>
    <string name="l4">4</string>
    <string name="l5">5</string>
    <string name="l6">6</string>
    <string name="l7">7</string>
    <string name="l8">8</string>
    <string name="l9">9</string>
    <string name="lAdd">+</string>
    <string name="lSub">-</string>
    <string name="lMult">*</string>
    <string name="lDiv">/</string>
    <string name="lEqual">=</string>
    <string name="lDot">.</string>
    <string name="clear">C</string>

</resources>
